--- a/core/bus_center/lnn/lane_hub/BUILD.gn
+++ b/core/bus_center/lnn/lane_hub/BUILD.gn
@@ -26,6 +26,34 @@ config("bus_center_hub_interface") {
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
   if (ohos_kernel_type == "liteos_m") {
+    static_library("dsoftbus_bus_center_hub") {
+      sources = [
+        "lane_manager/src/lnn_lane_info.c",
+        "lane_manager/src/lnn_lane_manager.c",
+        "lane_manager/src/lnn_smart_communication.c",
+        "time_sync/src/lnn_time_sync_manager_stub.c",
+      ]
+      include_dirs = [
+        "lane_manager/include",
+        "time_sync/include",
+        "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
+        "$dsoftbus_root_path/core/bus_center/service/include",
+        "$dsoftbus_root_path/core/common/include",
+        "$hilog_lite_include_path",
+      ]
+      cflags = [
+        "-Wall",
+        "-fPIC",
+        "-fno-builtin",
+        "-std=c99",
+      ]
+      public_configs = [ ":bus_center_hub_interface" ]
+      deps = [
+        "$dsoftbus_root_path/adapter:softbus_adapter",
+        "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
+        "$hilog_lite_deps_path",
+      ]
+    }
   } else {
     shared_library("dsoftbus_bus_center_hub") {
       sources = [
