--- a/core/bus_center/lnn/net_ledger/BUILD.gn
+++ b/core/bus_center/lnn/net_ledger/BUILD.gn
@@ -27,6 +27,39 @@ config("bus_center_ledger_interface") {
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
   if (ohos_kernel_type == "liteos_m") {
+    static_library("dsoftbus_bus_center_ledger") {
+      sources = [
+        "common/src/lnn_device_info.c",
+        "common/src/lnn_map.c",
+        "common/src/lnn_net_capability.c",
+        "common/src/lnn_node_info.c",
+        "distributed_ledger/src/lnn_distributed_net_ledger.c",
+        "local_ledger/src/lnn_local_net_ledger.c",
+        "net_ledger.c",
+      ]
+      include_dirs = [
+        "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
+        "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
+        "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
+        "$dsoftbus_root_path/core/common/include",
+        "$dsoftbus_root_path/core/common/softbus_property/include",
+        "$hilog_lite_include_path",
+      ]
+      cflags = [
+        "-Wall",
+        "-fPIC",
+        "-fno-builtin",
+        "-std=c99",
+      ]
+      public_configs = [ ":bus_center_ledger_interface" ]
+      deps = [
+        "$dsoftbus_root_path/adapter:softbus_adapter",
+        "$dsoftbus_root_path/core/common/json_utils:json_utils",
+        "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
+        "$dsoftbus_root_path/core/common/utils:softbus_utils",
+        "$hilog_lite_deps_path",
+      ]
+    }
   } else {
     shared_library("dsoftbus_bus_center_ledger") {
       sources = [
