--- a/core/authentication/BUILD.gn
+++ b/core/authentication/BUILD.gn
@@ -37,6 +37,13 @@ if (defined(ohos_lite)) {
 
   shared_library("dsoftbus_auth_server") {
     sources = common_src
+    if (enable_auth_account == true) {
+      hichain_deps = "//base/security/deviceauth/hichain:deviceauth_sdk"
+      hichain_include_dir = "//base/security/deviceauth/interface"
+    } else {
+      hichain_deps = "//base/security/deviceauth/services:deviceauth_sdk"
+      hichain_include_dir = "//base/security/deviceauth/interfaces/innerkits"
+    }
     include_dirs = [
       "$softbus_adapter_common/include",
       "$dsoftbus_root_path/core/bus_center/interface",
@@ -51,7 +58,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/common/softbus_property/include",
       "$softbus_adapter_config/spec_config",
       "$hilog_lite_include_path",
-      "//base/security/deviceauth/interfaces/innerkits",
+      "$hichain_include_dir",
       "//third_party/bounds_checking_function/include",
       "//third_party/cJSON",
     ]
@@ -69,8 +76,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
       "$dsoftbus_root_path/core/connection/tcp:tcp_connection",
+      "$hichain_deps",
       "$hilog_lite_deps_path",
-      "//base/security/deviceauth/services:deviceauth_sdk",
       "//third_party/bounds_checking_function:libsec_shared",
     ]
   }
