Description:event monitor impl Feature or Bugfix:Feature Binary Source: No
Signed-off-by: YOUR_NAME <heyingjiao@huawei.com>

--- a/adapter/common/bus_center/BUILD.gn
+++ b/adapter/common/bus_center/BUILD.gn
@@ -14,27 +14,24 @@
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 config("bus_center_monitor_interface") {
-  include_dirs = [
-    "include",
-    "$dsoftbus_root_path/interfaces/kits",
-    "$dsoftbus_root_path/interfaces/kits/bus_center",
-    "$dsoftbus_root_path/interfaces/kits/common",
-  ]
+  include_dirs = [ "include" ]
 }
-
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
   if (ohos_kernel_type == "liteos_m") {
     static_library("dsoftbus_bus_center_monitor") {
       sources = [
-        "src/lnn_event_monitor.c",
-        "src/lnn_lwip_monitor.c",
+        "network/lnn_lwip_monitor.c",
+        "network/lnn_netlink_monitor_virtual.c",
+        "platform/lnn_product_monitor_virtual.c",
       ]
       include_dirs = [
         "$dsoftbus_root_path/core/adapter/kernel/include",
         "$dsoftbus_root_path/core/common/include",
+        "$libsec_include_path",
         "$hilog_lite_include_path",
         "$hispark_pegasus_sdk_path/third_party/lwip_sack/include/lwip",
+        "$dsoftbus_root_path/core/bus_center/monitor/include",
       ]
       cflags = [
         "-Wall",
@@ -44,25 +41,34 @@ if (defined(ohos_lite)) {
       ]
       public_configs = [ ":bus_center_monitor_interface" ]
       deps = [
-        "$dsoftbus_root_path/adapter:softbus_adapter",
+        "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
         "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
         "$hilog_lite_deps_path",
+        "$libsec_deps_path",
       ]
     }
   } else {
     shared_library("dsoftbus_bus_center_monitor") {
-      sources = [ "src/lnn_event_monitor.c" ]
       if (ohos_kernel_type == "linux") {
-        sources += [ "src/lnn_netlink_monitor.c" ]
+        sources = [
+          "network/lnn_lwip_monitor_virtual.c",
+          "network/lnn_netlink_monitor.c",
+          "platform/lnn_product_monitor_virtual.c",
+        ]
       }
       include_dirs = [
         "$softbus_adapter_common/include",
         "$dsoftbus_root_path/core/common/include",
         "//third_party/bounds_checking_function/include",
         "$hilog_lite_include_path",
+        "$dsoftbus_root_path/core/bus_center/monitor/include",
       ]
       if (ohos_kernel_type == "liteos_a") {
-        sources += [ "$dsoftbus_root_path/adapter/common/bus_center/platform/lnn_product_monitor.c" ]
+        sources = [
+          "lwip/lnn_lwip_monitor_virtual.c",
+          "netlink/lnn_netlink_monitor_virtual.c",
+          "platform/lnn_product_monitor.c",
+        ]
         include_dirs += [
           "//drivers/adapter/uhdf/posix/include",
           "//drivers/framework/include/utils",
@@ -99,13 +105,15 @@ if (defined(ohos_lite)) {
 
   ohos_shared_library("dsoftbus_bus_center_monitor") {
     sources = [
-      "src/lnn_event_monitor.c",
-      "src/lnn_netlink_monitor.c",
+      "network/lnn_lwip_monitor_virtual.c",
+      "network/lnn_netlink_monitor.c",
+      "platform/lnn_product_monitor_virtual.c",
     ]
     include_dirs = [
       "$softbus_adapter_common/include",
       "$dsoftbus_root_path/core/common/include",
       "//utils/native/base/include",
+      "$dsoftbus_root_path/core/bus_center/monitor/include",
     ]
     public_configs = [ ":bus_center_monitor_interface" ]
     deps = [
