--- a/core/bus_center/BUILD.gn
+++ b/core/bus_center/BUILD.gn
@@ -43,6 +43,7 @@ if (defined(ohos_lite)) {
         "lnn/net_builder/sync_info/src/lnn_sync_item_info.c",
         "lnn/net_buscenter/src/lnn_ip_network_impl.c",
         "lnn/net_buscenter/src/lnn_network_manager.c",
+        "monitor/src/lnn_event_monitor.c",
         "service/src/bus_center_event.c",
         "service/src/bus_center_manager.c",
       ]
@@ -79,6 +80,7 @@ if (defined(ohos_lite)) {
         "lnn/lane_hub/time_sync/include",
         "$dsoftbus_root_path/sdk/bus_center/manager/include",
         "//third_party/cJSON",
+        "monitor/include",
       ]
       cflags = [
         "-Wall",
@@ -89,10 +91,10 @@ if (defined(ohos_lite)) {
       public_configs = [ ":bus_center_server_interface" ]
       deps = [
         "$dsoftbus_root_path/adapter:softbus_adapter",
+        "$dsoftbus_root_path/adapter/common/bus_center:dsoftbus_bus_center_monitor",
         "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
         "$dsoftbus_root_path/core/bus_center/lnn/lane_hub:dsoftbus_bus_center_hub",
         "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
-        "$dsoftbus_root_path/core/bus_center/monitor:dsoftbus_bus_center_monitor",
         "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
         "$dsoftbus_root_path/core/common/json_utils:json_utils",
         "$dsoftbus_root_path/core/common/log:softbus_log",
@@ -121,6 +123,7 @@ if (defined(ohos_lite)) {
         "lnn/net_builder/sync_info/src/lnn_sync_item_info.c",
         "lnn/net_buscenter/src/lnn_ip_network_impl.c",
         "lnn/net_buscenter/src/lnn_network_manager.c",
+        "monitor/src/lnn_event_monitor.c",
         "service/src/bus_center_event.c",
         "service/src/bus_center_manager.c",
       ]
@@ -153,6 +156,7 @@ if (defined(ohos_lite)) {
         "//third_party/bounds_checking_function/include",
         "$hilog_lite_include_path",
         "lnn/net_buscenter/include",
+        "monitor/include",
       ]
       cflags = [
         "-Wall",
@@ -164,6 +168,7 @@ if (defined(ohos_lite)) {
       public_configs = [ ":bus_center_server_interface" ]
       deps = [
         "$dsoftbus_root_path/adapter:softbus_adapter",
+        "$dsoftbus_root_path/adapter/common/bus_center:dsoftbus_bus_center_monitor",
         "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
         "$dsoftbus_root_path/core/common/json_utils:json_utils",
         "$dsoftbus_root_path/core/common/log:softbus_log",
@@ -176,7 +181,6 @@ if (defined(ohos_lite)) {
         "$hilog_lite_deps_path",
         "lnn/lane_hub:dsoftbus_bus_center_hub",
         "lnn/net_ledger:dsoftbus_bus_center_ledger",
-        "monitor:dsoftbus_bus_center_monitor",
         "utils:dsoftbus_bus_center_utils",
         "//build/lite/config/component/cJSON:cjson_shared",
         "//foundation/communication/ipc_lite:liteipc_adapter",
@@ -201,6 +205,7 @@ if (defined(ohos_lite)) {
       "lnn/net_builder/sync_info/src/lnn_sync_item_info.c",
       "lnn/net_buscenter/src/lnn_ip_network_impl.c",
       "lnn/net_buscenter/src/lnn_network_manager.c",
+      "monitor/src/lnn_event_monitor.c",
       "service/src/bus_center_event.c",
       "service/src/bus_center_manager.c",
     ]
@@ -233,11 +238,13 @@ if (defined(ohos_lite)) {
       "$softbus_adapter_config/spec_config",
       "//utils/system/safwk/native/include",
       "lnn/net_buscenter/include",
+      "monitor/include",
     ]
 
     public_configs = [ ":bus_center_server_interface" ]
     deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
+      "$dsoftbus_root_path/adapter/common/bus_center:dsoftbus_bus_center_monitor",
       "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
       "$dsoftbus_root_path/core/common/json_utils:json_utils",
       "$dsoftbus_root_path/core/common/log:softbus_log",
@@ -251,7 +258,6 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
       "lnn/lane_hub:dsoftbus_bus_center_hub",
       "lnn/net_ledger:dsoftbus_bus_center_ledger",
-      "monitor:dsoftbus_bus_center_monitor",
       "utils:dsoftbus_bus_center_utils",
       "//utils/native/base:utils",
     ]
