--- a/sdk/frame/BUILD.gn
+++ b/sdk/frame/BUILD.gn
@@ -32,6 +32,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/interfaces/kits/bus_center",
         "$dsoftbus_root_path/core/common/inner_communication",
         "$dsoftbus_root_path/core/bus_center/interface",
+        "$dsoftbus_root_path/core/transmission/common/include",
         "$dsoftbus_root_path/core/transmission/session/include",
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
         "$dsoftbus_root_path/core/transmission/pending_packet/include",
@@ -65,6 +66,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/common/include",
         "$softbus_adapter_common/include",
         "$dsoftbus_root_path/core/common/inner_communication",
+        "$dsoftbus_root_path/core/transmission/common/include",
         "//third_party/bounds_checking_function/include",
         "$hilog_lite_include_path",
         "$softbus_adapter_config/spec_config",
@@ -114,6 +116,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/sdk/transmission/session/include",
       "$dsoftbus_root_path/sdk/bus_center/manager/include",
       "$dsoftbus_root_path/core/frame/standard/client/include",
+      "$dsoftbus_root_path/core/transmission/common/include",
       "$softbus_adapter_config/spec_config",
       "$dsoftbus_root_path/core/common/softbus_property/include",
     ]
