--- a/sdk/transmission/ipc/BUILD.gn
+++ b/sdk/transmission/ipc/BUILD.gn
@@ -27,6 +27,8 @@ if (defined(ohos_lite)) {
   common_include = [
     "$softbus_adapter_common/include",
     "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/core/transmission/common/include",
+    "$dsoftbus_root_path/interfaces/kits/transport",
     "$libsec_include_path",
     "$hilog_lite_include_path",
   ]
@@ -73,7 +75,9 @@ if (defined(ohos_lite)) {
       "standard/include",
       "//utils/system/safwk/native/include",
       "$dsoftbus_root_path/core/frame/standard/server/include",
+      "$dsoftbus_root_path/core/transmission/common/include",
       "$dsoftbus_root_path/interfaces/kits/discovery",
+      "$dsoftbus_root_path/interfaces/kits/transport",
       "$dsoftbus_root_path/core/common/include",
       "$dsoftbus_root_path/interfaces/kits/common",
     ]
