--- a/sdk/transmission/trans_channel/auth/BUILD.gn
+++ b/sdk/transmission/trans_channel/auth/BUILD.gn
@@ -32,6 +32,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/interfaces/kits/transport",
         "$dsoftbus_root_path/interfaces/kits/common",
         "$dsoftbus_core_path/common/include",
+        "$dsoftbus_root_path/core/transmission/common/include",
         "$dsoftbus_root_path/sdk/transmission/session/include",
       ]
       sources = [ "src/client_trans_auth_manager.c" ]
@@ -44,6 +45,7 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/interfaces/kits/transport",
         "$dsoftbus_root_path/interfaces/kits/common",
         "$dsoftbus_core_path/common/include",
+        "$dsoftbus_root_path/core/transmission/common/include",
         "$dsoftbus_root_path/sdk/transmission/session/include",
       ]
       cflags = [
@@ -63,6 +65,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/interfaces/kits/transport",
       "$dsoftbus_root_path/interfaces/kits/common",
       "$dsoftbus_core_path/common/include",
+      "$dsoftbus_root_path/core/transmission/common/include",
       "$dsoftbus_root_path/sdk/transmission/session/include",
     ]
     sources = [ "src/client_trans_auth_manager.c" ]
